cicd-pipeline/k8s/ruoyi-k8s/test.yml

---
################################
# ruoyi-auth
################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruoyi-auth
  namespace: ruoyi-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ruoyi-auth
  template:
    metadata:
      labels:
        app: ruoyi-auth
    spec:
      containers:
        - name: ruoyi-auth
          image: 192.168.255.140:80/ruoyi-cloud/ruoyi-auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9200
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9200
            initialDelaySeconds: 40
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: ruoyi-auth
  namespace: ruoyi-cloud
spec:
  selector:
    app: ruoyi-auth
  ports:
    - port: 9200
      targetPort: 9200
  type: ClusterIP
